- update for SCROLL 1.1.0

--- a/scroll/internal/support/RoleGroups.html
+++ b/scroll/internal/support/RoleGroups.html
@@ -215,7 +215,7 @@ object or the return value of one of its functions.">
             <span class="toggle">
               Known Subclasses
             </span>
-            <div class="subClasses hiddenContent"><a href="../CachedCompartment.html" class="extype" name="scroll.internal.CachedCompartment">CachedCompartment</a>, <a href="../Compartment.html" class="extype" name="scroll.internal.Compartment">Compartment</a>, <a href="../KiamaCompartment.html" class="extype" name="scroll.internal.KiamaCompartment">KiamaCompartment</a></div>
+            <div class="subClasses hiddenContent"><a href="../Compartment.html" class="extype" name="scroll.internal.Compartment">Compartment</a></div>
           </div></div>
         
 
