--- a/scroll/internal/support/UnionTypes$$RoleUnionTypes.html
+++ b/scroll/internal/support/UnionTypes$$RoleUnionTypes.html
@@ -202,7 +202,7 @@ things like <a href="Relationships.html" class="extype" name="scroll.internal.su
             <span class="toggle">
               Known Subclasses
             </span>
-            <div class="subClasses hiddenContent"><a href="../CachedCompartment.html" class="extype" name="scroll.internal.CachedCompartment">CachedCompartment</a>, <a href="../Compartment.html" class="extype" name="scroll.internal.Compartment">Compartment</a>, <a href="../KiamaCompartment.html" class="extype" name="scroll.internal.KiamaCompartment">KiamaCompartment</a></div>
+            <div class="subClasses hiddenContent"><a href="../Compartment.html" class="extype" name="scroll.internal.Compartment">Compartment</a></div>
           </div></div>
         
 
