--- a/scroll/internal/util/Many$.html
+++ b/scroll/internal/util/Many$.html
@@ -146,6 +146,14 @@ like logging (<a href="Log$.html" class="extype" name="scroll.internal.util.Log"
                           Many
                         </a>
                       </li><li class="current-entities indented3">
+                        <span class="separator"></span>
+                        <a class="trait" href="Memoiser.html" title="Support for memoization, encapsulating common behaviour of memoised
+entities and a general reset mechanism for all such entities."></a>
+                        <a href="Memoiser.html" title="Support for memoization, encapsulating common behaviour of memoised
+entities and a general reset mechanism for all such entities.">
+                          Memoiser
+                        </a>
+                      </li><li class="current-entities indented3">
                         <a class="object" href="ReflectiveHelper$.html" title="Companion object for the Trait ReflectiveHelper containing some
 useful functions for translating class and type names to Strings."></a>
                         <a class="trait" href="ReflectiveHelper.html" title="Trait containing an implicit wrapper which provides helper functions
