--- a/scroll/internal/util/ReflectiveHelper.html
+++ b/scroll/internal/util/ReflectiveHelper.html
@@ -146,6 +146,14 @@ like logging (<a href="Log$.html" class="extype" name="scroll.internal.util.Log"
                           Many
                         </a>
                       </li><li class="current-entities indented3">
+                        <span class="separator"></span>
+                        <a class="trait" href="Memoiser.html" title="Support for memoization, encapsulating common behaviour of memoised
+entities and a general reset mechanism for all such entities."></a>
+                        <a href="Memoiser.html" title="Support for memoization, encapsulating common behaviour of memoised
+entities and a general reset mechanism for all such entities.">
+                          Memoiser
+                        </a>
+                      </li><li class="current-entities indented3">
                         <a class="object" href="ReflectiveHelper$.html" title="Companion object for the Trait ReflectiveHelper containing some
 useful functions for translating class and type names to Strings."></a>
                         <a class="trait" href="" title="Trait containing an implicit wrapper which provides helper functions
@@ -195,7 +203,7 @@ to access common tasks for working with reflections.
             <span class="toggle">
               Known Subclasses
             </span>
-            <div class="subClasses hiddenContent"><a href="../CachedCompartment.html" class="extype" name="scroll.internal.CachedCompartment">CachedCompartment</a>, <a href="../Compartment.html" class="extype" name="scroll.internal.Compartment">Compartment</a>, <a href="../KiamaCompartment.html" class="extype" name="scroll.internal.KiamaCompartment">KiamaCompartment</a>, <a href="../support/QueryStrategies.html" class="extype" name="scroll.internal.support.QueryStrategies">QueryStrategies</a></div>
+            <div class="subClasses hiddenContent"><a href="../Compartment.html" class="extype" name="scroll.internal.Compartment">Compartment</a>, <a href="../support/QueryStrategies.html" class="extype" name="scroll.internal.support.QueryStrategies">QueryStrategies</a></div>
           </div></div>
         
 
