- updated to latest SCROLL version 1.3.0

--- a/scroll/internal/util/ReflectiveHelper$Reflective.html
+++ b/scroll/internal/util/ReflectiveHelper$Reflective.html
@@ -492,9 +492,9 @@ to access common tasks for working with reflections.
       
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AnyRef → Any</dd></dl></div>
     </li><li name="scroll.internal.util.ReflectiveHelper.Reflective#is" visbl="pub" class="indented0 " data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="is[T](implicitevidence$1:reflect.runtime.universe.WeakTypeTag[T]):Boolean"></a><a id="is[T](scala.reflect.api.JavaUniverse.WeakTypeTag[T]):Boolean"></a>
+      <a id="is[T](implicitevidence$1:scala.reflect.ClassTag[T]):Boolean"></a><a id="is[T](ClassTag[T]):Boolean"></a>
       <span class="permalink">
-      <a href="../../../scroll/internal/util/ReflectiveHelper$Reflective.html#is[T](implicitevidence$1:reflect.runtime.universe.WeakTypeTag[T]):Boolean" title="Permalink">
+      <a href="../../../scroll/internal/util/ReflectiveHelper$Reflective.html#is[T](implicitevidence$1:scala.reflect.ClassTag[T]):Boolean" title="Permalink">
         <i class="material-icons"></i>
       </a>
     </span>
@@ -503,7 +503,7 @@ to access common tasks for working with reflections.
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">is</span><span class="tparams">[<span name="T">T</span>]</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <span class="extype" name="scala.reflect.api.TypeTags.WeakTypeTag">scala.reflect.api.JavaUniverse.WeakTypeTag</span>[<span class="extype" name="scroll.internal.util.ReflectiveHelper.Reflective.is.T">T</span>]</span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.12.0/index.html#scala.Boolean" class="extype" target="_top">Boolean</a></span>
+        <span class="name">is</span><span class="tparams">[<span name="T">T</span>]</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <a href="http://www.scala-lang.org/api/2.12.0/index.html#scala.reflect.ClassTag" class="extype" target="_top">ClassTag</a>[<span class="extype" name="scroll.internal.util.ReflectiveHelper.Reflective.is.T">T</span>]</span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.12.0/index.html#scala.Boolean" class="extype" target="_top">Boolean</a></span>
       </span>
       
       <p class="shortcomment cmt">Checks if the wrapped object is of type T.</p><div class="fullcomment"><div class="comment cmt"><p>Checks if the wrapped object is of type T.
