- updated to latest SCROLL changes

--- a/scroll/internal/support/index.html
+++ b/scroll/internal/support/index.html
@@ -424,7 +424,7 @@ things like <a href="Relationships.html" class="extype" name="scroll.internal.su
       </span>
       
       <p class="shortcomment cmt">Composed dispatch query, i.e.</p><div class="fullcomment"><div class="comment cmt"><p>Composed dispatch query, i.e. applying the composition of all dispatch queries the given set of edges
-through the function <i>reorder</i>.
+through the function <a href="DispatchQuery.html#filter(anys:Seq[Any]):Seq[Any]" class="extmbr" name="scroll.internal.support.DispatchQuery#filter">DispatchQuery.filter</a>.
 All provided queries must be side-effect free!
 </p></div></div>
     </li><li name="scroll.internal.support.QueryStrategies" visbl="pub" class="indented0 " data-isabs="true" fullComment="no" group="Ungrouped">
