- updated to latest SCROLL version

--- a/scroll/internal/support/DispatchQuery.html
+++ b/scroll/internal/support/DispatchQuery.html
@@ -556,9 +556,9 @@ All provided queries must be side-effect free!
       
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AnyRef</dd></dl></div>
     </li><li name="scroll.internal.support.DispatchQuery#sortedWith" visbl="pub" class="indented0 " data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="sortedWith(f:(Any,Any)=&gt;Boolean):scroll.internal.support.DispatchQuery"></a><a id="sortedWith((Any,Any)⇒Boolean):DispatchQuery"></a>
+      <a id="sortedWith(f:PartialFunction[(Any,Any),Boolean]):scroll.internal.support.DispatchQuery"></a><a id="sortedWith(PartialFunction[(Any,Any),Boolean]):DispatchQuery"></a>
       <span class="permalink">
-      <a href="../../../scroll/internal/support/DispatchQuery.html#sortedWith(f:(Any,Any)=&gt;Boolean):scroll.internal.support.DispatchQuery" title="Permalink">
+      <a href="../../../scroll/internal/support/DispatchQuery.html#sortedWith(f:PartialFunction[(Any,Any),Boolean]):scroll.internal.support.DispatchQuery" title="Permalink">
         <i class="material-icons"></i>
       </a>
     </span>
@@ -567,7 +567,7 @@ All provided queries must be side-effect free!
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">sortedWith</span><span class="params">(<span name="f">f: (<a href="http://www.scala-lang.org/api/2.12.0/index.html#scala.Any" class="extype" target="_top">Any</a>, <a href="http://www.scala-lang.org/api/2.12.0/index.html#scala.Any" class="extype" target="_top">Any</a>) ⇒ <a href="http://www.scala-lang.org/api/2.12.0/index.html#scala.Boolean" class="extype" target="_top">Boolean</a></span>)</span><span class="result">: <a href="" class="extype" name="scroll.internal.support.DispatchQuery">DispatchQuery</a></span>
+        <span class="name">sortedWith</span><span class="params">(<span name="f">f: <a href="http://www.scala-lang.org/api/2.12.0/index.html#scala.PartialFunction" class="extype" target="_top">PartialFunction</a>[(<a href="http://www.scala-lang.org/api/2.12.0/index.html#scala.Any" class="extype" target="_top">Any</a>, <a href="http://www.scala-lang.org/api/2.12.0/index.html#scala.Any" class="extype" target="_top">Any</a>), <a href="http://www.scala-lang.org/api/2.12.0/index.html#scala.Boolean" class="extype" target="_top">Boolean</a>]</span>)</span><span class="result">: <a href="" class="extype" name="scroll.internal.support.DispatchQuery">DispatchQuery</a></span>
       </span>
       
       <p class="shortcomment cmt">Set the function to later sort all dynamic extensions during <a href="#filter(anys:Seq[Any]):Seq[Any]" class="extmbr" name="scroll.internal.support.DispatchQuery#filter">DispatchQuery.filter</a>.</p><div class="fullcomment"><div class="comment cmt"><p>Set the function to later sort all dynamic extensions during <a href="#filter(anys:Seq[Any]):Seq[Any]" class="extmbr" name="scroll.internal.support.DispatchQuery#filter">DispatchQuery.filter</a>.
