- updated to latest SCROLL changes

--- a/scroll/internal/index.html
+++ b/scroll/internal/index.html
@@ -268,7 +268,7 @@ like logging (scroll.internal.util.Log) and reflection (scroll.internal.util.Ref
       </span>
       
       <p class="shortcomment cmt">Package containing some useful utility classes for SCROLL
-like logging (<a href="util/Log$.html" class="extype" name="scroll.internal.util.Log">scroll.internal.util.Log</a>) and reflection (<a href="util/ReflectiveHelper.html" class="extype" name="scroll.internal.util.ReflectiveHelper">scroll.internal.util.ReflectiveHelper</a>).</p>
+like logging (<a href="util/Log$.html" class="extype" name="scroll.internal.util.Log">scroll.internal.util.Log</a>) and reflection (<a href="util/ReflectiveHelper$.html" class="extype" name="scroll.internal.util.ReflectiveHelper">scroll.internal.util.ReflectiveHelper</a>).</p>
     </li><li class="current-entities indented2">
                         <span class="separator"></span>
                         <a class="trait" href="Compartment.html" title="This Trait allows for implementing an objectified collaboration with a limited number of participating roles and a fixed scope."></a>
