--- a/scroll/internal/support/QueryStrategies$MatchAny.html
+++ b/scroll/internal/support/QueryStrategies$MatchAny.html
@@ -134,9 +134,9 @@ things like <a href="Relationships.html" class="extype" name="scroll.internal.su
 things like <a href="Relationships.html" class="extype" name="scroll.internal.support.Relationships">scroll.internal.support.Relationships</a>, <a href="RoleConstraints.html" class="extype" name="scroll.internal.support.RoleConstraints">scroll.internal.support.RoleConstraints</a> or <a href="RoleRestrictions.html" class="extype" name="scroll.internal.support.RoleRestrictions">scroll.internal.support.RoleRestrictions</a>.
 </p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="../index.html" class="extype" name="scroll.internal">internal</a></dd></dl></div>
     </li><li name="scroll.internal.support.QueryStrategies" visbl="pub" class="indented4 " data-isabs="true" fullComment="yes" group="Ungrouped">
-      <a id="QueryStrategiesextendsReflectiveHelper"></a><a id="QueryStrategies:QueryStrategies"></a>
+      <a id="QueryStrategiesextendsAnyRef"></a><a id="QueryStrategies:QueryStrategies"></a>
       <span class="permalink">
-      <a href="../../../scroll/internal/support/index.html#QueryStrategiesextendsReflectiveHelper" title="Permalink">
+      <a href="../../../scroll/internal/support/index.html#QueryStrategiesextendsAnyRef" title="Permalink">
         <i class="material-icons"></i>
       </a>
     </span>
@@ -148,7 +148,7 @@ things like <a href="Relationships.html" class="extype" name="scroll.internal.su
         <a title="Allows to write queries looking for the content of an attribute of the certain role playing
 object or the return value of one of its functions." href="QueryStrategies.html">
               <span class="name">QueryStrategies</span>
-            </a><span class="result"> extends <a href="../util/ReflectiveHelper.html" class="extype" name="scroll.internal.util.ReflectiveHelper">ReflectiveHelper</a></span>
+            </a><span class="result"> extends <a href="http://www.scala-lang.org/api/2.12.0/index.html#scala.AnyRef" class="extype" target="_top">AnyRef</a></span>
       </span>
       
       <p class="shortcomment cmt">Allows to write queries looking for the content of an attribute of the certain role playing
@@ -160,14 +160,6 @@ object or the return value of one of its functions.
                         <a class="class" href="" title=""></a>
                         <a href="" title="">
                           MatchAny
-                        </a>
-                      </li><li class="current-entities indented4">
-                        <span class="separator"></span>
-                        <a class="class" href="../util/ReflectiveHelper$Reflective.html" title="An implicit wrapper which provides helper functions
-to access common tasks for working with reflections."></a>
-                        <a href="../util/ReflectiveHelper$Reflective.html" title="An implicit wrapper which provides helper functions
-to access common tasks for working with reflections.">
-                          Reflective
                         </a>
                       </li><li class="current-entities indented4">
                         <span class="separator"></span>
