--- a/scroll/internal/util/Memoiser.html
+++ b/scroll/internal/util/Memoiser.html
@@ -130,8 +130,8 @@ like logging (scroll.internal.util.Log) and reflection (scroll.internal.util.Ref
       </span>
       
       <p class="shortcomment cmt">Package containing some useful utility classes for SCROLL
-like logging (<a href="Log$.html" class="extype" name="scroll.internal.util.Log">scroll.internal.util.Log</a>) and reflection (<a href="ReflectiveHelper.html" class="extype" name="scroll.internal.util.ReflectiveHelper">scroll.internal.util.ReflectiveHelper</a>).</p><div class="fullcomment"><div class="comment cmt"><p>Package containing some useful utility classes for SCROLL
-like logging (<a href="Log$.html" class="extype" name="scroll.internal.util.Log">scroll.internal.util.Log</a>) and reflection (<a href="ReflectiveHelper.html" class="extype" name="scroll.internal.util.ReflectiveHelper">scroll.internal.util.ReflectiveHelper</a>).
+like logging (<a href="Log$.html" class="extype" name="scroll.internal.util.Log">scroll.internal.util.Log</a>) and reflection (<a href="ReflectiveHelper$.html" class="extype" name="scroll.internal.util.ReflectiveHelper">scroll.internal.util.ReflectiveHelper</a>).</p><div class="fullcomment"><div class="comment cmt"><p>Package containing some useful utility classes for SCROLL
+like logging (<a href="Log$.html" class="extype" name="scroll.internal.util.Log">scroll.internal.util.Log</a>) and reflection (<a href="ReflectiveHelper$.html" class="extype" name="scroll.internal.util.ReflectiveHelper">scroll.internal.util.ReflectiveHelper</a>).
 </p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="../index.html" class="extype" name="scroll.internal">internal</a></dd></dl></div>
     </li><li class="current-entities indented3">
                         <span class="separator"></span>
@@ -154,12 +154,11 @@ entities and a general reset mechanism for all such entities.">
                           Memoiser
                         </a>
                       </li><li class="current-entities indented3">
-                        <a class="object" href="ReflectiveHelper$.html" title="Companion object for the Trait ReflectiveHelper containing some
-useful functions for translating class and type names to Strings."></a>
-                        <a class="trait" href="ReflectiveHelper.html" title="Trait containing an implicit wrapper which provides helper functions
-to access common tasks for working with reflections."></a>
-                        <a href="ReflectiveHelper.html" title="Trait containing an implicit wrapper which provides helper functions
-to access common tasks for working with reflections.">
+                        <span class="separator"></span>
+                        <a class="object" href="ReflectiveHelper$.html" title="Contains useful functions for translating class and type names to Strings
+and provides helper functions to access common tasks for working with reflections."></a>
+                        <a href="ReflectiveHelper$.html" title="Contains useful functions for translating class and type names to Strings
+and provides helper functions to access common tasks for working with reflections.">
                           ReflectiveHelper
                         </a>
                       </li>
@@ -201,7 +200,7 @@ entities and a general reset mechanism for all such entities.
             <span class="toggle">
               Known Subclasses
             </span>
-            <div class="subClasses hiddenContent"><a href="../graph/CachedScalaRoleGraph.html" class="extype" name="scroll.internal.graph.CachedScalaRoleGraph">CachedScalaRoleGraph</a></div>
+            <div class="subClasses hiddenContent"><a href="../graph/CachedScalaRoleGraph.html" class="extype" name="scroll.internal.graph.CachedScalaRoleGraph">CachedScalaRoleGraph</a>, <a href="ReflectiveHelper$.html" class="extype" name="scroll.internal.util.ReflectiveHelper">ReflectiveHelper</a></div>
           </div></div>
         
 
