--- a/scroll/internal/support/index.html
+++ b/scroll/internal/support/index.html
@@ -321,8 +321,8 @@ like logging (scroll.internal.util.Log) and reflection (scroll.internal.util.Ref
       </span>
       
       <p class="shortcomment cmt">Package containing some useful utility classes for SCROLL
-like logging (<a href="../util/Log$.html" class="extype" name="scroll.internal.util.Log">scroll.internal.util.Log</a>) and reflection (<a href="../util/ReflectiveHelper.html" class="extype" name="scroll.internal.util.ReflectiveHelper">scroll.internal.util.ReflectiveHelper</a>).</p><div class="fullcomment"><div class="comment cmt"><p>Package containing some useful utility classes for SCROLL
-like logging (<a href="../util/Log$.html" class="extype" name="scroll.internal.util.Log">scroll.internal.util.Log</a>) and reflection (<a href="../util/ReflectiveHelper.html" class="extype" name="scroll.internal.util.ReflectiveHelper">scroll.internal.util.ReflectiveHelper</a>).
+like logging (<a href="../util/Log$.html" class="extype" name="scroll.internal.util.Log">scroll.internal.util.Log</a>) and reflection (<a href="../util/ReflectiveHelper$.html" class="extype" name="scroll.internal.util.ReflectiveHelper">scroll.internal.util.ReflectiveHelper</a>).</p><div class="fullcomment"><div class="comment cmt"><p>Package containing some useful utility classes for SCROLL
+like logging (<a href="../util/Log$.html" class="extype" name="scroll.internal.util.Log">scroll.internal.util.Log</a>) and reflection (<a href="../util/ReflectiveHelper$.html" class="extype" name="scroll.internal.util.ReflectiveHelper">scroll.internal.util.ReflectiveHelper</a>).
 </p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="../index.html" class="extype" name="scroll.internal">internal</a></dd></dl></div>
     </li>
               </ul>
@@ -428,9 +428,9 @@ through the function <a href="DispatchQuery.html#filter(anys:Seq[Any]):Seq[Any]"
 All provided queries must be side-effect free!
 </p></div></div>
     </li><li name="scroll.internal.support.QueryStrategies" visbl="pub" class="indented0 " data-isabs="true" fullComment="no" group="Ungrouped">
-      <a id="QueryStrategiesextendsReflectiveHelper"></a><a id="QueryStrategies:QueryStrategies"></a>
+      <a id="QueryStrategiesextendsAnyRef"></a><a id="QueryStrategies:QueryStrategies"></a>
       <span class="permalink">
-      <a href="../../../scroll/internal/support/index.html#QueryStrategiesextendsReflectiveHelper" title="Permalink">
+      <a href="../../../scroll/internal/support/index.html#QueryStrategiesextendsAnyRef" title="Permalink">
         <i class="material-icons"></i>
       </a>
     </span>
@@ -442,7 +442,7 @@ All provided queries must be side-effect free!
         <a title="Allows to write queries looking for the content of an attribute of the certain role playing
 object or the return value of one of its functions." href="QueryStrategies.html">
               <span class="name">QueryStrategies</span>
-            </a><span class="result"> extends <a href="../util/ReflectiveHelper.html" class="extype" name="scroll.internal.util.ReflectiveHelper">ReflectiveHelper</a></span>
+            </a><span class="result"> extends <a href="http://www.scala-lang.org/api/2.12.0/index.html#scala.AnyRef" class="extype" target="_top">AnyRef</a></span>
       </span>
       
       <p class="shortcomment cmt">Allows to write queries looking for the content of an attribute of the certain role playing
