--- a/scroll/internal/util/Memoiser$Memoised.html
+++ b/scroll/internal/util/Memoiser$Memoised.html
@@ -130,8 +130,8 @@ like logging (scroll.internal.util.Log) and reflection (scroll.internal.util.Ref
       </span>
       
       <p class="shortcomment cmt">Package containing some useful utility classes for SCROLL
-like logging (<a href="Log$.html" class="extype" name="scroll.internal.util.Log">scroll.internal.util.Log</a>) and reflection (<a href="ReflectiveHelper.html" class="extype" name="scroll.internal.util.ReflectiveHelper">scroll.internal.util.ReflectiveHelper</a>).</p><div class="fullcomment"><div class="comment cmt"><p>Package containing some useful utility classes for SCROLL
-like logging (<a href="Log$.html" class="extype" name="scroll.internal.util.Log">scroll.internal.util.Log</a>) and reflection (<a href="ReflectiveHelper.html" class="extype" name="scroll.internal.util.ReflectiveHelper">scroll.internal.util.ReflectiveHelper</a>).
+like logging (<a href="Log$.html" class="extype" name="scroll.internal.util.Log">scroll.internal.util.Log</a>) and reflection (<a href="ReflectiveHelper$.html" class="extype" name="scroll.internal.util.ReflectiveHelper">scroll.internal.util.ReflectiveHelper</a>).</p><div class="fullcomment"><div class="comment cmt"><p>Package containing some useful utility classes for SCROLL
+like logging (<a href="Log$.html" class="extype" name="scroll.internal.util.Log">scroll.internal.util.Log</a>) and reflection (<a href="ReflectiveHelper$.html" class="extype" name="scroll.internal.util.ReflectiveHelper">scroll.internal.util.ReflectiveHelper</a>).
 </p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="../index.html" class="extype" name="scroll.internal">internal</a></dd></dl></div>
     </li><li name="scroll.internal.util.Memoiser" visbl="pub" class="indented4 " data-isabs="true" fullComment="yes" group="Ungrouped">
       <a id="MemoiserextendsAnyRef"></a><a id="Memoiser:Memoiser"></a>
