- updated to latest SCROLL version

--- a/scroll/internal/annotations/index.html
+++ b/scroll/internal/annotations/index.html
@@ -339,7 +339,7 @@ like logging (<a href="../util/Log$.html" class="extype" name="scroll.internal.u
       <span class="symbol">
         <a title="" href="Role.html">
               <span class="name">Role</span>
-            </a><span class="params">()</span><span class="result"> extends <a href="http://www.scala-lang.org/api/2.12.0/index.html#scala.annotation.Annotation" class="extype" target="_top">Annotation</a> with <a href="http://www.scala-lang.org/api/2.12.0/index.html#scala.annotation.StaticAnnotation" class="extype" target="_top">StaticAnnotation</a> with <a href="http://www.scala-lang.org/api/2.12.0/index.html#scala.Product" class="extype" target="_top">Product</a> with <a href="http://www.scala-lang.org/api/2.12.0/index.html#scala.Serializable" class="extype" target="_top">Serializable</a></span>
+            </a><span class="params">()</span><span class="result"> extends <a href="http://scala-lang.org/files/archive/api/2.12.3/scala/annotation/Annotation.html#scala.annotation.Annotation" class="extype" name="scala.annotation.Annotation">Annotation</a> with <a href="http://scala-lang.org/files/archive/api/2.12.3/scala/annotation/StaticAnnotation.html#scala.annotation.StaticAnnotation" class="extype" name="scala.annotation.StaticAnnotation">StaticAnnotation</a> with <a href="http://scala-lang.org/files/archive/api/2.12.3/scala/Product.html#scala.Product" class="extype" name="scala.Product">Product</a> with <a href="http://scala-lang.org/files/archive/api/2.12.3/scala/Serializable.html#scala.Serializable" class="extype" name="scala.Serializable">Serializable</a></span>
       </span>
       
       
